--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,30 +1,13 @@
-body{
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
 .header-bg{
   background-color: #000;
-}
-ul{
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-
-}
-a{
-  text-decoration: none;
-  color: #fff;
 }
 .header{
   display: flex;
   flex-wrap:wrap ;
   justify-content: space-between;
-  max-width: 1200px;
-  box-sizing: border-box;
-  padding: 20px;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  align-items:center;
 }
 .header-menu{
   display: flex;
@@ -34,7 +17,6 @@ a{
 .header-menu a{
   padding: 16px 0px;
   display: inline-block;
-  font-size: 18px;
   position: relative;
 }
 .header-menu a::after{
@@ -42,13 +24,14 @@ a{
   width: 0%;
   height: 2px;
   display: block;
-  background: #fff;
+  background: var(--cor-0);
   margin-top: 4px;
-}
-.header-menu a:hover::after{
-  width: 100%;
-  transition: 0.3s;
   position: absolute;
+  transition: 0.3s;
+}
+.header-menu a:hover::after,
+.header-menu a.ativo::after {
+  width: 100%;
 }
 
 @media (max-width: 800px){
@@ -57,14 +40,16 @@ a{
   }
   .header-menu a{
     padding: 12px 16px;
-    background-color: #111;
+    background-color: var(--cor-11);
     border-radius: 4px;
+    font-family: 'Roboto';
+    font-weight: 500;
 }
   .header a::after{
     display: none;
   }
   .header-menu a:hover{
-    background: #2e2e2e;
+    background: var(--cor-10);
   }
 }
 
